# spacefn-evdev

./: .gitignore  Makefile.am  README.md  auto.sh  configure  configure.ac  install.sh  spacefn.c
config/: poker.cfg
configs/: logi.cfg
rules/: 99-spacefn.rules
src/: spacefn.c
